--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack-dev-server --config webpack-dev-server.config.js --port 8888 --hot --devtool eval --progress --colors --content-base app",
+    "dev": "webpack-dev-server --config webpack-dev-server.config.js --port 8888 --inline --hot --devtool eval --progress --colors --content-base app",
     "deploy": "webpack -p --config webpack-deploy.config.js --progress --colors"
   },
   "author": "Andy Tsai",
@@ -27,6 +27,7 @@
     "postcss-loader": "^0.8.1",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
+    "react-router": "^3.0.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
