--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^6.3.3",
+    "axios": "^0.15.3",
     "babel-core": "^6.5.2",
     "babel-loader": "^6.2.3",
     "babel-polyfill": "^6.9.1",
